--- a/securityworkshop.html
+++ b/securityworkshop.html
@@ -101,55 +101,88 @@
                 </div>
                 <div id="speakerinfo">
                     <div id="gerdes">
+                    <div id="gerdes-heading">
                     <h3>Ryan Gerdes</h3>
                     <div class="image"><img src="photos/Embedded_Security_Workshop/Gerdes.jpg" alt="Ryan Gerdes Headshot"></div>
+                    </div>
+                    <div id="gerdes-p">
                     <p>Ryan M. Gerdes is an Associate Professor in the Bradley Department of Electrical and Computer Engineering at Virginia Tech.  Dr. Gerdes’ work focuses on designing resilient computing systems, with an emphasis on cyber-physical systems operating in adversarial environments and leveraging the physical layer for defensive and offensive purposes.  He is the principal investigator on NSF and DOE projects that examine the security and privacy of cooperative, automated vehicles; unmanned aerial systems (UAS); and next-generation battery electric vehicles and chargers.</p>
                     <h4>Abstract</h4>
                     <p>This talk will consider attacks in three domains against safety critical systems: 1) in vision-based object classification systems imaging sensors perceive the environment and machine learning is then used to detect and classify objects for decision-making purposes; e.g., to maneuver an automated vehicle around an obstacle or to raise an alarm to indicate the presence of an intruder in surveillance settings. We will discuss how the perception domain can be remotely and unobtrusively exploited to enable an attacker to create spurious objects or alter an existing object. 2) Extremely fast charging (XFC), whereby electric vehicles (EV) can be quickly recharged in the time frame it takes to refuel an internal combustion engine, has been proposed to alleviate range anxiety in EVs.  A critical component of these chargers is the efficient and proper operation of power converters that convert AC to DC power and otherwise regulate power delivery to vehicles.  We will demonstrate that, with relatively low power levels, an adversary is able to manipulate the voltage and current sensor outputs necessary to ensure the proper operation of the converters, to catastrophic effect. 3) Traffic Collision Avoidance Systems (TCAS) are safety-critical systems required on most commercial aircrafts in service today. We'll examine TCAS from an adversarial perspective with the goal of inducing near mid-air collisions between current day TCAS-equipped aircraft.</p>
                     </div>
+                    </div>
                     <div id="kim">
+                        <div id="kim-heading">
                         <h3>Yongdae Kim</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Kim.jpg" alt="Yongdae Kim Headshot"></div>
+                        </div>
+                        <div id="kim-p">
                         <p>Yongdae Kim is a Professor in the Department of Electrical Engineering, an affiliate professor in the Graduate School of Information Security at KAIST. He received PhD degree from the computer science department at the University of Southern California under the guidance of Gene Tsudik. Between 2002 and 2012, he was an associate/assistant professor in the Department of Computer Science and Engineering at the University of Minnesota - Twin Cities. Before coming to the US, he worked 6 years in ETRI for securing Korean cyberinfrastructure. He served as a KAIST Chair Professor between 2013 and 2016, and received NSF career award on storage security and McKnight Land-Grant Professorship Award from University of Minnesota in 2005. Currently, he is serving as an associate editor for ACM TOPS, and he was a steering committee member of NDSS between 2012 - 2018. His main research includes novel attacks and analysis methodologies for emerging technologies, such as Cyber Physical Systems including drone/self-driving cars, 4G/5G cellular networks and Blockchain.</p>
                         <h4>Abstract</h4>
                         <p>Sensors are essential components of sensing-and-actuation system such as drones, self-driving cars, medical devices and smoke detectors. Active sensors are designed to collect physical information about remote objects. In this talk, I will talk about security of active sensors such as lidars and camera sensors for self-driving cars, drop sensors for infusion pumps and optical beam smoke detector (OBSD) installed in critical infrastructure such as government buildings, airports and museums. Then, I'll conclude my talk with a few design considerations for future sensor designers.</p>
                     </div>
+                    </div>
                     <div id="kornegay">
+                        <div id="kornegay-heading">
                         <h3>Kevin Kornegay</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Kornegay.jpg" alt="Kevin Kornegay Headshot"></div>
+                        </div>
+                        <div id="kornegay-p">
                         <p>Kevin T. Kornegay received the B.S. degree in electrical engineering from Pratt Institute, Brooklyn, NY, in 1985 and the M.S. and Ph.D. degrees in electrical engineering from the University of California at Berkeley in 1990 and 1992, respectively. He is currently the IoT Security Professor and Director of the Cybersecurity Assurance and Policy (CAP) Center for Academic Excellence in the Electrical and Computer Engineering Department at Morgan State University in  Baltimore, MD. His research interests include hardware assurance, reverse engineering, secure embedded systems,  side-­‐channel  analysis, and differential fault analysis.  Dr. Kornegay serves or has served on the technical program committees of several international conferences including the IEEE Symposium on Hardware Oriented  Security and  Trust (HOST), EEE Secure Development Conference (SECDEV), USENIX Security 2020, the IEEE Physical Assurance and Inspection of Electronics (PAINE), and the ACM Great Lakes Symposium on VLSI (GLSVLSI). He is the recipient of numerous awards, including He is the recipient of multiple awards, including the NSF CAREER Award, IBM Faculty Partnership Award, National Semiconductor Faculty Development Award, and the General Motors Faculty Fellowship Award. He is currently a senior member of the IEEE and a member of Eta Kappa Nu and Tau Beta Pi engineering honor societies.</p>
                         <h4>Abstract</h4>
                         <p>The mission of the Cybersecurity Assurance and Policy (CAP) Center at Morgan State University is to provide the defense and intelligence community with the knowledge, methodology, solutions, and highly skilled cybersecurity professionals to mitigate penetration and manipulation of our nation’s cyber- hysical infrastructure. The Internet of Things (IoT) permeates all areas of life and work, with unprecedented economic effects. The IoT is a network of dedicated physical objects (things) whose embedded system technology senses or interacts with its internal state or external environment. Embedded systems perform dedicated functions within larger mechanical or electrical systems. Critical infrastructures in transportation, smart grid, manufacturing, and health care, etc. are highly dependent on embedded systems for distributed control, tracking, and data collection. While it is paramount to protect these systems from hacking, intrusion, and physical tampering, current solutions rely on a patchwork of legacy systems, and this is unsustainable as a long-term solution. Transformative solutions are required to protect these systems. In this talk, we will present our current research that addresses security vulnerabilities in IoT ecosystems to provide secure, resilient, and robust operation.</p>
+                        </div>
                     </div>
                     <div id="mao">
+                        <div id="mao-heading">
                         <h3>Morley Mao</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Morley.jpg" alt="Morley Mao Headshot"></div>
+                        </div>
+                        <div id="mao-p">
                         <p>Z. Morley Mao is a Professor in EECS at the University of Michigan, having completed her Ph.D. at UC Berkeley on robust Internet routing protocol design and effective network measurement techniques to uncover network properties. Her current research focus encompasses software-defined networking, AV security, network security, next-generation Internet protocols, and mobile systems.</p>
                         <h4>Abstract</h4>
                         <p>Perception plays a pivotal role in autonomous driving systems,which utilizes onboard sensors like cameras and LiDARs(Light Detection and Ranging) to assess surroundings. Recentstudies have demonstrated that LiDAR-based perception isvulnerable to spoofing attacks, in which adversaries spoof afake vehicle in front of a victim self-driving car by strategically transmitting laser signals to the victim’s LiDAR sensor. However, existing attacks suffer from effectiveness and generality limitations. In this work, we perform the first study toexplore the general vulnerability of current LiDAR-based perception architectures and discover that the ignored occlusionpatterns in LiDAR point clouds make self-driving cars vulnerable to spoofing attacks. We construct the first black-box spoofing attack based on our identified vulnerability, which universally achieves around 80% mean success rates on alltarget models. We perform the first defense study, proposingCARLO to mitigate LiDAR spoofing attacks. CARLO detectsspoofed data by treating ignored occlusion patterns as invari-ant physical features, which reduces the mean attack successrate to 5.5%. Meanwhile, we take the first step towards explor-ing a general architecture for robust LiDAR-based perception,and propose SVF that embeds the neglected physical featuresinto end-to-end learning. SVF further reduces the mean attacksuccess rate to around 2.3%.</p>
+                        </div>
                     </div>
                     <div id="petersen">
+                        <div id="petersen-heading">
                         <h3>Erika Petersen</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Petersen.jpg" alt="Erika Petersen Headshot"></div>
+                        </div>
+                        <div id="petersen-p">
                         <p>Dr. Petersen directs the Section of Functional and Restorative Neurosurgery at UAMS Medical Center. She is a professor in the Department of Neurosurgery at UAMS and program director for the neurosurgery residency. She is a board certified neurosurgeon whose clinical practice focuses on neuromodulation, treating movement disorders, spasticity, and chronic pain through surgical procedures and stereotactic radiosurgery. Dr. Petersen's research interests focus on developing new devices, indications, and methods for treating chronic pain using neuromodulation. Her collaborations with colleagues in interventional pain, neuroradiology, neurology and psychiatry are aimed toward identifying new applications for the use of deep brain stimulation and neuromodulation for pain. Dr. Petersen completed her undergraduate education at Princeton University and received her medical degree from the University of North Carolina at Chapel Hill. She trained in neurosurgery at the University of Texas Southwestern with a fellowship in deep brain stimulation at the National Hospital for Neurology and Neurosurgery in London. Dr. Petersen has served on the Joint Section on Pain of the American Association of Neurological Surgeons (AANS)/Congress of Neurological Surgeons (CNS) and the CNS Scientific Programming Committee and sits on the Executive Board of the American Society of Pain and Neuroscience, where she is secretary. She serves as associate editor of stereotactic and functional neurosurgery for Operative Neurosurgery, and is on the editorial board of Neuromodulation and contributes as a reviewer for several other journals. Dr. Petersen lectures frequently at national and international meetings on neuromodulation for pain, emerging considerations and uses of neuromodulation, chronic pain management and deep brain stimulation. She has authored numerous articles and book chapters related to stereotactic and functional neurosurgery and neuroscience.</p>
                         <h4>Abstract</h4>
                         <p>Data privacy and cybersecurity should both be seriously considered for all devices that interact with our patients. Patient data privacy is a key tenet of HIPAA, but data acquired by devices outside the medical record may not be protected. Implanted neuromodulation devices for movement disorders, epilepsy, and pain are able to track and record data, which can then be downloaded to hospital, office or manufacturer sites for review. These data can be collected and stored indefinitely, allowing for retrospective analysis, which as our understanding of neurophysiology improves, will lead to new and unforeseen insights. For example, brainwave data collected for seizure mapping served as the basis for understanding neurophysiology of vision, ultimately contributing to developing of a new neuromodulation device to enable sight. What today might seem like unparsable noise may be the key to a breakthrough as our neuroscience knowledge and artificial intelligence and machine learning capabilities improve. As with collection and recording from external devices, there are serious concerns about the privacy of date collected from implanted devices. There is little education of patients and clinicians about data collection and its use and possible misuse, and these considerations are rarely part of informed consent discussions. There is no business relationship between the patient and the manufacturer of their device, no statement of Terms of Service, nor discussion of how patients might opt out of data collection. Until policies are clearer, clinicians and patients must rely on the good will, morality or ethical code of manufacturers to preserve data privacy.</p>
                     </div>
+                    </div>
                     <div id="burleson">
+                        <div id="burleson-heading">
                         <h3>Wayne Burleson</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Burleson.jpg" alt="Wayne Burleson Headshot"></div>
+                        </div>
                     </div>
                     <div id="holcomb">
+                        <div id="holcomb-heading">
                         <h3>Dan Holcomb</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Holcomb.jpg" alt="Dan Holcomb Headshot"></div>
+                        </div>
                     </div>
                     <div id="kocher">
+                        <div id="kocher-heading">
                         <h3>Paul Kocher</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Kocher.jpg" alt="Paul Kocher Headshot"></div>
+                        </div>
+                        <div id="kocher-p">
+                            <p>Paul Kocher is an entrepreneur and researcher focused on cryptography and data security and is currently exploring independent research topics. Areas of interest include trade-offs between complexity/performance and security, as well as how computer systems could be architected to reduce the likelihood and severity of exploitable security vulnerabilities. One of the results of this work discovering a class of vulnerabilities (which I named Spectre) arising from the use of speculative execution in microprocessors. Paul was elected to the National Academy of Engineering in 2009 for contributions to cryptography and Internet security. He's a member of the Forum on Cyber Resilience, which is a National Academies roundtable. He's also a member of the Cybersecurity Hall of Fame and is a frequent speaker on security topics.</p>
+                            <h4>Abstract</h4>
+                            <p>During the now-ended performance boom, microprocessor performance optimizations brought enormous economic benefits that vastly exceeded the costs of insecurity. As CPU improvements stalled out, security costs continued to scale exponentially. As a result, we are now at the beginning of a starkly different era characterized by staggering insecurity costs and modest performance gains. This talk explores the technical and business implications of a world where security risk is the dominant issue, while performance merely needs to be good enough. Architectures will increasingly need to address messy real-world problems, such as side channels and fault attacks. Likewise, security models need to reflect realistic assumptions about the fallibility of the humans who architect, implement, test, and administer systems. Ultimately, changing constraints present a major challenge for previously-dominant companies while creating enormous opportunities for entrepreneurs.</p>
+                        </div>
                     </div>
                     <div id="sugawara">
+                        <div id="sugawar-heading">
                         <h3>Takeshi Sugawara</h3>
                         <div class="image"><img src="photos/Embedded_Security_Workshop/Sugawara.jpg" alt="Takeshi Sugawara Headshot"></div>
+                        </div>
                     </div>
                 </div>
 
